--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/after-dark"]
 	path = themes/after-dark
 	url = https://github.com/getzola/after-dark.git
+[submodule "themes/zerm"]
+	path = themes/zerm
+	url = https://github.com/ejmg/zerm
