--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # The URL the site will be built for
-base_url = "http://benjaminaltieri.com"
+base_url = "/"
 
 # Used in RSS by default
 title = "Ben Altieri's Personal Blog"
@@ -93,7 +93,7 @@ center = true
 # copyright = "copyright notice here"
 
 # What is displayed in the top left corner of the website. Default is zerm.
-logo_text = "HUZZAW!!!!!"
+logo_text = "BITS AND BITES"
 
 # Link in logo. Default returns you to $BASE_URL.
 logo_home_link = "/"
