--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,26 @@
 # The URL the site will be built for
-base_url = "http://benjaminaltieri.com"
+base_url = "/"
+
+# Used in RSS by default
+title = "Ben Altieri's Personal Blog"
+description = "Bits and bites."
+
+# The default language, used in RSS
+# TODO: I would love to support more languages and make this easy to handle
+# with other facets of the theme.
+default_language = "en"
+
+# Whether to generate a RSS feed automatically
+generate_feed = true
+# 'atom.xml' (default if unspecified) and 'rss.xml' are officially supported
+# values for feed_filename in this theme. All other filenames will assume a
+# link type of 'application/rss+xml'.
+# feed_filename = "atom.xml"
+
+# Theme name to use.
+# NOTE: should not need to mess with this if you are using zerm directly, i.e. cloning the
+# repository at root and not using as directed by the Zola docs via themes/ directory.
+theme = "zerm"
 
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
@@ -8,25 +29,103 @@ compile_sass = true
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = true
 
+# Syntax highlighting theme. See:
+# https://www.getzola.org/documentation/getting-started/configuration/#syntax-highlighting
+# for more information and themes built into Zola.
+highlight_theme = "axar" # Other dark themes that work: "1337", "agola-dark",
+                         # "visual-studio-dark"
+
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = true
 
-theme = "after-dark"
-
-paginate_by = 5
-
 taxonomies = [
-    # You can enable/disable RSS
-    {name = "categories", rss = false},
-    {name = "tags", rss = false},
+    {name = "categories"},
+    {name = "tags"},
 ]
 
 [extra]
-author = "Cheeseblinces"
-after_dark_menu = [
-    {url = "$BASE_URL", name = "benjaminaltieri.com"},
-    {url = "$BASE_URL/about", name = "About"},
-    {url = "https://github.com/benjaminaltieri", name = "Github"},
-    {url = "https://www.linkedin.com/in/benjaminaltieri", name = "LinkedIn"},
+# Put all your custom variables here
+#
+# Many configurations are taken directly from Terminal's config.toml
+# ---------------------------------------------------------
+
+# Author name to be added to posts, if enabled.
+author = "Ben Altieri"
+
+# Show author's name in blog post meta data.
+show_author = false
+
+# Show categories a blog post is marked with in its meta data.
+show_categories = true
+
+# Show tags a blog post is marked with in its meta data.
+show_tags = true
+
+# Theme color. You can have any color you want, so long as it's...
+# ["orange", "blue", "red", "green", "pink"]
+theme_color = "red"
+
+# Custom css to style over the defaults. This is useful when you only have a
+# few small tweaks to make rather than a major rehaul to the theme.
+# It would be best to make this a proper .sass or .scss file in sass/ rather
+# than placing in static/
+# custom_css = "custom.css"
+
+# How many menu items to show on desktop. if you set this to 0, only submenu
+# button will be visible.
+show_menu_items = 10
+
+# set theme to full screen width.
+full_width = false
+
+# center theme with default width.
+center = true
+
+# set a custom favicon. Must be placed in root of static/ directory...
+# favicon = ""
+
+
+# Set a custom preview image for your website when posted as a link.
+# Must be placed in root of static/ directory...
+# og_preview_img = ""
+
+# Copyright notice if desired. Defaults to
+# copyright = "copyright notice here"
+
+# What is displayed in the top left corner of the website. Default is zerm.
+logo_text = "BITS AND BITES"
+
+# Link in logo. Default returns you to $BASE_URL.
+logo_home_link = "/"
+
+# Menu items to display. You define a url and the name of the menu item.
+# NOTE: `$BASE_URL/` must be included in the url name.
+main_menu = [
+              {url="", name="home"},
+              {url="/about/", name="about"},
+              {url="https://github.com/benjaminaltieri", name="github", external=true},
+              {url="https://www.linkedin.com/in/benjaminaltieri", name="linkedin", external=true},
 ]
-after_dark_title = "Ben Altieri"
+
+# Displayed as title of drop-down menu when size of main_menu > show_menu_items.
+menu_more = "show more"
+
+# Displayed after teaser text for a blog post.
+read_more = "read more"
+
+# not currently used from previous theme, but leaving here for now in case I
+# feel like adding it.
+read_other_posts = "read other posts"
+
+
+# Enable math typesetting with KaTeX
+# Show math in pages with `math=true` in the TOML frontmatter
+enable_katex = true
+
+# Options for disqus
+disqus = { enabled=false, short_name="" }
+
+# generate Table of Contents for all articles
+# Table of Contents can be generated for individual articles
+# by adding `ToC = true` in [extra] section in frontmatter
+# ToC = true
